# 42_webserver

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: devcontainer.json  setup.sh
YoupiBanane/: youpi.bad_extension  youpibanane.conf
include/: config.hpp  enums.hpp  location.hpp
includes/: ASocket.hpp  CgiExecutor.hpp  CgiResponseParser.hpp  ClientSocket.hpp  ConfigParser.hpp  Epoll.hpp  ExecResult.hpp  ExecutionResult.hpp  FileValidater.hpp  FileValidator.hpp  HttpRequest.hpp  HttpResponse.hpp  Location.hpp  LocationMatch.hpp  RequestHandler.hpp  ServerConfig.hpp  ServerSocket.hpp  Webserv.hpp  config.hpp  config_parser.hpp  enums.hpp  host_validation.hpp  location.hpp  server_config.hpp
sample_config/: server_api_files.conf  server_example_upload.conf  server_localhost.conf  server_multiple_port.conf  server_no_location.conf  server_redirect.conf  server_test_for_parse.conf  server_test_for_static_post.conf  server_throw_413.conf
sample_http_messages/: http_request_samples.txt
srcs/: ASocket.cpp  CgiExecutor.cpp  CgiResponseParser.cpp  ClientSocket.cpp  ConfigParser.cpp  Epoll.cpp  FileValidater.cpp  FileValidator.cpp  HttpRequest.cpp  HttpResponse.cpp  RequestHandler.cpp  ServerConfig.cpp  ServerSocket.cpp  Webserv.cpp  config.cpp  configParser.cpp  location.cpp  main.cpp  serverConfig.cpp
tests/: HttpRequest_advanceBodyParsing.test.cpp  HttpRequest_advanceHeaderParsing.test.cpp  HttpRequest_consumeHeader.test.cpp  HttpRequest_consumeMethod.test.cpp  HttpRequest_consumeUri.test.cpp  HttpRequest_consumeVersion.test.cpp  (+19 more)
(+183 files in other folders)
